src/somatic.css
/* ... */
.arrangement-editor__row--selection-first {
    border-top: 2px solid var(--accent);
}

.arrangement-editor__row--selection-last {
    border-bottom: 2px solid var(--accent);
}

.arrangement-editor__row--playing {
    box-shadow: 0 0 0 2px var(--row-active) inset;
    border-radius: 4px;
}

.arrangement-editor__row--selected.arrangement-editor__row--playing {
    box-shadow: 0 0 0 2px var(--tic-0) inset, 0 0 0 4px var(--row-active) inset;
}

.arrangement-editor__row:hover .arrangement-editor__step,
.arrangement-editor__row:hover .arrangement-editor__delete {
    opacity: 1;
}

.arrangement-editor__controls {
    display: flex;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    /* don't do border top & bottom because it leaves weird gaps*/

}

.arrangement-editor button.arrangement-editor__pattern {
    color: var(--text);
    /* background-color: var(--row-a); */
}

.arrangement-editor__pattern-name-container {
    margin-left: 6px;
    flex: 1;
}

.arrangement-editor__pattern-name {
    font-size: 11px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    min-width: 40px;
    display: inline-block;
    height: 100%;
    cursor: pointer;
}

.arrangement-editor__pattern-name-input {
    font-family: var(--ff-mono);
    font-size: 11px;
    width: 100%;
    padding: 1px 2px;
    border: 1px solid var(--border);
}

.musicState-panel div.flags {
    display: flex;
    /* background-color: var(--panel); */
}

.musicState-panel div.flags div.key {
    display: flex;
    /* color: var(--muted); */
    font-size: 14px;
}

.musicState-panel div.flags div.value {
    display: flex;
    min-width: 28px;
    font-size: 14px;
}

.autoSaveIndicator__label {
    font-size: 12px;
    width: 80px;
}

